# ContactSearchBackend

./: .env.sample  .gitignore  README.md  pyproject.toml
docs/: api_schema.md
env/: .env.sample  models.txt  system_message.txt  url_list.txt
samples/: c4ai.py  ollamatest.py  ollamaurltest.py  sysmsgtest.py
src/: api.py  langchaintest.py
